# ageny_online

./: .coverage  .gitignore  =4.37  ANTONINA_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHECKLIST.md  COMMIT_SUMMARY_JUNE_2025.md  COMMUNITY.md  CONTRIBUTING.md  COOKING_FEATURES_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile.online  FAZA_4_INTEGRACJA_OCZYSZCZENIE.md  LICENSE  RAPORT_KOMPLETNYCH_TESTOW.md  RAPORT_NAPRAW_TESTOW.md  RAPORT_WDROZENIA_WERSJI_ONLINE.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TEEN_IMPLEMENTATION_SUMMARY.md  TEEN_VERSION_README.md  deploy-mikrus.sh  docker-compose.mikrus.yaml  docker-compose.online.yaml  docker-compose.yml  env.example  monitor-mikrus.sh  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_tests.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API_FIXES_DECEMBER_2024.md  API_FIXES_JUNE_2025.md  API_REFERENCE.md  MISTRAL_OCR_GUIDE.md  TUTOR_ANTONINA_GUIDE.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  TutorHints.test.tsx  TutorHints.tsx
frontend/src/components/cooking/: CookingChallengesSection.tsx  DietPlanSection.tsx  ProductsSection.test.tsx  ProductsSection.tsx  RecipesSection.test.tsx  RecipesSection.tsx  ShoppingListSection.test.tsx  ShoppingListSection.tsx
frontend/src/components/gamification/: AchievementsPanel.test.tsx  AchievementsPanel.tsx  ConfettiAnimation.tsx  DailyChallenges.test.tsx  DailyChallenges.tsx  PointsDisplay.test.tsx  PointsDisplay.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/src/contexts/: ApiContext.tsx  GamificationContext.tsx  HealthContext.tsx
frontend/src/pages/: ChatPage.tsx  CookingPage.tsx  OCRPage.tsx  ProvidersPage.tsx  TeenDashboard.tsx  WebSearchPage.tsx
monitoring/: prometheus.yml
src/UNKNOWN.egg-info/: SOURCES.txt
src/backend/: config.py
src/backend/agents/: base_agent.py  tutor_agent.py
src/backend/api/: main.py
src/backend/api/v2/endpoints/: __init__.py  chat.py  cooking.py  gamification.py  ocr.py  profile.py  vector_store.py  web_search.py
src/backend/core/llm_providers/: anthropic_client.py  cohere_client.py  mistral_client.py  openai_client.py  perplexity_client.py  provider_factory.py
src/backend/core/ocr_providers/: __init__.py  azure_vision.py  google_vision.py  mistral_vision.py  ocr_factory.py
src/backend/core/vector_stores/: pinecone_client.py  weaviate_client.py
src/backend/database/: __init__.py  database.py  session.py
src/backend/exceptions/: __init__.py  agent.py  auth.py  base.py  database.py  ocr.py
src/backend/models/: __init__.py  base.py  conversation.py  cost_tracking.py  ocr_result.py  product.py  recipe.py  shopping_list.py  user.py
src/backend/plugins/: __init__.py  diet_plugin.py
src/backend/schemas/: __init__.py  conversation.py  cooking.py  cost.py  message.py  ocr.py  ocr_schemas.py  tutor.py  user.py
src/backend/services/: __init__.py  conversation_service.py  cooking_service.py  cost_service.py  ocr_service.py  user_service.py
ssl/: cert.pem  private.key
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_tutor_endpoints.py
tests/unit/: test_config.py  test_llm_providers.py  test_mistral_ocr.py  test_models.py  test_ocr_endpoints.py  test_ocr_factory.py  test_ocr_providers.py  test_perplexity_client.py  test_schemas.py  test_tutor_agent.py  test_vector_stores.py
